<resources>
    <string name="app_name">NYC Menagerie</string>
    //nav drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    //bio
    <string name="bio_creator">Caroline hails from Flushing, and is a garlic fiend so she expects to live until she’s 101 as a spritely elderly lady. And in between, build some unforgettable codes - both insanely good and terribly bad.</string>
    <string name="name_creator">Caroline Kang</string>
    <string name="btn_linkedin">Say hello on linkedin</string>
    <string name="btn_github_repo">Check out ongoing projects on Github</string>
    <string name="linkedin_creator">https://www.linkedin.com/in/carolinehkang/</string>
    <string name="github_creator">https://github.com/garlicfiendck?tab=repositories</string>

    //pollsite locator
    <string name="link_pollsite_locator">https://nyc.pollsitelocator.com/search</string>
    <string name="txt_expectations">Upon clicking the button, you will be prompted to enter your house #, street name, and zip code on the NYC Board of Elections Pollsite Locator page</string>

    //pollworker
    <string name="pw_txt_1">Depending on your registration status and availability you may be assigned to work as an Inspector, Poll Clerk, Information Clerk or Accessibility Clerk.</string>
    <string name="pw_txt_2"><![CDATA[Inspector/Poll Clerk are generally responsible for the operations in the ED, including opening the polls, serving voters and closing the polls including accuracy of canvass. Inspectors must stay for completion of canvass and tally. Ensures that Affidavit Ballot Envelopes are completed correctly and signs each one. Responsible for the set-up & closing of the Ballot Marking Device and Scanner. Assists the voter as needed on this equipment]]></string>
    <string name="pw_txt_3">Information Clerk use the Street Finder and Poll Site List to direct voters to their correct ED/AD and poll site. May also be re-assigned to be an Inspector or Poll Clerk on Election Day, as necessary.</string>
    <string name="pw_txt_4">Accessibility Clerk ensures that the alternate entrance is accessible throughout the day. Monitors the entrance to prevent unauthorized individuals from entering. Checks to see that a ramp with handrails and/or platform are in place if required. Assists but does not provide physical help to disabled voters entering the site. Checks that access posters, directional arrows, Vote Here signs and all other outdoor signs are hung properly.</string>
    <string name="pw_int_text">The Interpreter assists non-English speaking voters by translating voting information given by the Inspector and answers voter questions. The Interpreter may also assist non-English and limited-English speaking voters in voting booths.</string>
    <string name="link_pw_ap_online">https://nyc.electiondayworker.com/r/rA_4yzXNYkmL7ahEXYi0dw</string>
    <string name="link_ap_pw_more_info">https://www.vote.nyc.ny.us/html/workers/positions.shtml</string>

    //voter status
    <string name="chk_reg_question">Am I Registered to Vote?</string>
    <string name="link_chk_reg">https://voterlookup.elections.ny.gov/</string>
    <string name="txt_reg_2"><b><u>In-Person:</u></b> Register to vote in person at one of BOE offices.</string>
    <string name="txt_reg_3"><b><u>Online:</u></b> If you have a valid ID from the New York State Department of Motor Vehicles, you can register to vote online.</string>
    <string name="txt_reg_1"><b><u>By Mail:</u></b> Visit the website to download the application, complete the form, sign it, and mail it to: <b>Board of Elections 32 Broadway, 7 Fl New York, NY 10004–1609. </b> Your form must be delivered or mailed at least 25 days before the next election for it to be effective for that election. You may also obtain Registration Forms from libraries, post offices, and most New York City government agencies, or by calling the Phone Bank at <b> 1.866.VOTE.NYC </b> and we\'ll send you a postage-paid registration form in the mail.</string>
    <string name="txt_reg_intro">You can register to vote by mail, in-person, or online.</string>
    <string name="link_regVoteDLApp">https://www.vote.nyc.ny.us/html/voters/register.shtml</string>
    <string name="regVoteInPerson">https://www.vote.nyc.ny.us/html/contact/offices.shtml</string>
    <string name="regVoteOnline">https://dmv.ny.gov/more-info/electronic-voter-registration-application</string>
    <string name="phone_boe_hotline">(866)8683692</string>
    <string name="txt_visit_boe_dl_app">Visit Website</string>
    <string name="txt_boe_offices">BOE Offices</string>
    <string name="txt_register_online">Register Online</string>
    <string name="txt_hd_register_to_vote">Register to Vote</string>

    //upcoming elections
    <string name="hd_upcoming_el">2019 Upcoming Elections</string>
    <string name="sub_hd_sp_el"><u>Special Election for City Council</u></string>
    <string name="date_sp_el">May 15, 2019</string>
    <string name="sub_hd_pr_el"><u>Primary Election</u></string>
    <string name="date_pr_el">June 25, 2019</string>
    <string name="sub_hd_gen_el"><u>General Election</u></string>
    <string name="date_gen_el">November 5, 2019</string>

   //bill of rights
    <string name="hd_bill_of_rights"><b>New York State Voter\'s Bill of Rights</b></string>
    <string name="txt_bill_of_rights">
        \n <b>As a registered voter, you have the right to:</b>\n
        \n <b>Vote:</b> The right to vote includes voting for candidates and questions on the ballot and having sufficient time to vote. \n
        \n <b>Have Your Votes Count:</b> Vote on a voting system that is in working condition and that will allow votes to be accurately cast. \n
        \n <b>Secrecy In Voting:</b> Secrecy in voting will be preserved for all elections. \n
        \n <b>Freedom In Voting:</b> Cast your vote, free from coercion or intimidation by elections officers or any other person. \n
        \n <b>Permanent Registration:</b> Once registered to vote, you continue to remain qualified to vote from an address within your county or city. \n
        \n <b>Accessible Elections:</b> Non-discriminatory equal access to the election system for all voters, including the elderly, disabled, alternative language minorities, military and overseas citizens, as required by Federal and State laws. \n
        \n <b>Assistance In Voting:</b> You may request assistance to vote because of blindness, disability, or inability to read or write. Instruction In Voting: You can view a sample ballot in this polling place prior to voting, and before entering or approaching a privacy booth, scanner or ballot marking device, you may request help in how to mark and/or cast your ballot. \n
        \n <b>Affidavit Voting:</b> Whenever your name does not appear in the poll ledger or the voter registration or enrollment list, or you do not provide identification when required, you will be offered an affidavit ballot. \n </string>

</resources>
